--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@
   border-color:  #FFA500;
 }
 
+.ranking a{
+  color: black;
+} 
+
 .ranking-title {
   font-size: 20px; 
 }
@@ -20,9 +24,12 @@ select {
 }
 
 .challenge-button {
-  background-color: #99FF99;
-  border-radius: 100px;
-  border: none;
+  background-color: #C6F281;
+　color: #5d5d5d;
+  text-align: center;
+  padding: 14px;
+  border-radius: 25px;
+  font-family: 'Kosugi Maru', sans-serif;
 }
 
 .details {
