--- a/mocks/css/resipe_show.css
+++ b/mocks/css/resipe_show.css
@@ -18,3 +18,23 @@
   border: none;
   font-family: 'Kosugi Maru', sans-serif;
 }
+
+.repsipe_details {
+  background-color: #fff;
+  border: solid 4px #FEEDB5;
+  border-radius: 35px;
+}
+
+.resipe_detail_image {
+  width: 50%;
+}
+
+.everyone_resipe {
+  background-color: #fff;
+  border: solid 4px #FEEDB5;
+  border-radius: 35px;
+}
+
+.other_image {
+  width: 80%;
+}
