--- a/mocks/css/resipe_show.css
+++ b/mocks/css/resipe_show.css
@@ -30,6 +30,27 @@
   width: 90%;
 }
 
+.cooking_time_icon {
+  width: 10%;
+  margin: 0 10%;
+}
+
+.liquor_icon {
+  width: 10%;
+  margin: 0 10%;
+}
+
+.create_button {
+  background-color: #A0FBBB;
+  text-align: center;
+  width: 100px;
+  padding: 14px;
+  border-radius: 25px;
+  font-family: 'Kosugi Maru', sans-serif;
+  border: none;
+  margin: 0 5%;
+}
+
 .everyone_resipe {
   background-color: #fff;
   border: solid 4px #FEEDB5;
